# project_smart_sensor

./: board.h  custom_labels.h  dataset_creation.py  functions_and_main_related.c  functions_and_main_related.h  import_serial_test.py  model_definition.py  model_int8_2.tflite  model_saved.keras  model_train_quantiz.ipynb  model_training.py  model_trunc_saved.keras  pin_mux.c  pin_mux.h  readme.md  stage.c  stage.xml  tf_model_int8.tflite  tflite_quant_model.tflite  timer.h  utils_NXP_N7.py
Dataset/0/: 0.csv  0_1.csv  0_10.csv  0_11.csv  0_12.csv  0_13.csv  0_14.csv  0_15.csv  0_16.csv  0_17.csv  0_18.csv  0_19.csv  0_2.csv  0_20.csv  0_21.csv  0_22.csv  0_23.csv  0_24.csv  0_25.csv  0_26.csv  0_27.csv  0_28.csv  0_29.csv  0_3.csv  0_30.csv  0_31.csv  0_32.csv  0_33.csv  0_34.csv  0_35.csv  (+41 more)
armgcc/: CMakeLists.txt  CMakePresets.json  MCXN947_cm33_core0_flash.ld  build_all.bat  build_release.bat  config.cmake  flags.cmake  mcux_include.json
armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  lpspi_interrupt_b2b_transfer_master.elf  output.map  stage.elf
armgcc/debug/.cmake/api/v1/reply/: cache-v2-4ef1fe54d6aa99d58e89.json  cache-v2-8012ff35348344c50bb1.json  cache-v2-b9b46d4840270f376bb5.json  cache-v2-be4873fef2b4da0b157a.json  cache-v2-e191868dd34e02f3dc89.json  cmakeFiles-v1-4f8184ec6da2866c00a5.json  cmakeFiles-v1-588b0dc2379d3b869772.json  codemodel-v2-1e85cdc1106679cd843c.json  codemodel-v2-5fb5214ad491bc47e8a4.json  codemodel-v2-8106b6606955538970bd.json  codemodel-v2-96e26c6f05e6b5ee5175.json  codemodel-v2-b40f9ce8e621411f2f32.json  index-2024-09-05T12-58-03-0070.json  index-2025-11-20T07-26-42-0414.json  index-2025-11-22T21-54-48-0134.json  index-2025-12-15T10-19-44-0613.json  index-2025-12-18T10-24-33-0557.json  target-stage.elf-debug-0fa56f2c35f240a11b72.json  target-stage.elf-debug-3dd39312cc92553279f2.json  target-stage.elf-debug-58dbff7a61bdbd6b656d.json  target-stage.elf-debug-bb664ec71448b4935193.json  target-stage.elf-debug-d242dc4e0c3124a24c81.json  toolchains-v1-a9e4fe50004ff709ba1d.json  toolchains-v1-d4fcd814fa8db1875393.json
data_processed_1/: data_processed_1labels_df.csv
model/: custom_model.cpp  custom_model.h  custom_model_data.s  custom_model_ops_npu.cpp  custom_output_postproc.cpp  custom_output_postproc.h  model_saved.keras  model_trunc_saved.keras  tf_model_int8.tflite  tf_model_int8_converted.tflite  tf_model_int8_v12.tflite  tf_model_int8_v12_converted.tflite  tf_model_int8_v12_converted_cropped.tflite  tf_model_int8_v12_cropped.tflite  tf_model_int8_v12_cropped_converted.tflite  tflite_quant_model.tflite  tflite_quant_model_converted.tflite
(+639 files in other folders)
